plugins {
    id 'java'
}

group = 'su.grinev'
version = '0.1.1'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
// https://mvnrepository.com/artifact/org.projectlombok/lombok
    implementation("org.projectlombok:lombok:1.18.38")
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    implementation 'org.mongodb:bson:4.10.2'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-modules', 'jdk.incubator.vector'
    ]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--add-modules', 'jdk.incubator.vector'
    ]
}

test {
    useJUnitPlatform()
}